--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body{
 
 .rectgris {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
     height: 100%;               
     width: 100%;                
@@ -66,4 +66,11 @@ body{
     border-radius: 15px;
     border: 5px black;
     background-color: orange;
+}
+
+#categorie_toggle{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
