--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: black;
+    background: linear-gradient(to bottom, lightblue ,darkblue, black)
 } 
 
 .parent {
@@ -11,7 +11,7 @@ body{
     
 .div1{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 .div2 {
@@ -35,9 +35,8 @@ body{
     grid-row: span 5 / span 5;
     grid-column-start: 2;
     grid-row-start: 1;
-    border-radius: 15px;
-    border: 1px solid rgb(148, 0, 0);
-    background-color: rgb(143, 137, 137);
+    border-radius: 13px;
+    background: linear-gradient(45deg, white ,orange, lightgray,gray,black)
 }
 
 #carte {
@@ -56,16 +55,17 @@ body{
     height: 100%;               
     width: 100%;                
     border-radius: 15px;         
-    border: 1px solid rgb(148, 0, 0); 
-    background-color: rgb(143, 137, 137);
-}
+    background: linear-gradient(45deg, orange, gray)}
 
 .buttonReset{
     
     text-align: center;
+    padding: 0% 15% ;
     border-radius: 15px;
-    border: 5px black;
-    background-color: orange;
+    background-color: rgb(69, 75, 243);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 100%;
+    font-weight: bold;
 }
 
 #categorie_toggle{
@@ -73,4 +73,17 @@ body{
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+}
+
+.btn-categorie{
+    padding: 1% 100% ;
+    border-radius: 15px;
+    background-color: orange;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 100%;
+    font-weight: bold;
+
+}
+.btn-categorie.active{
+    background-color: lightgray;
 }
