--- a/Paliers/Palier1/Labyrinthe/style.css
+++ b/Paliers/Palier1/Labyrinthe/style.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'SAO UI';
-    src: url('/SAOMAP/SAOUI-Regular.woff2') format('woff2'),
-        url('/SAOMAP/SAOUI-Regular.woff') format('woff');
+    src: url('/SAOMAP/font/SAOUI-Regular.woff2') format('woff2'),
+        url('/SAOMAP/font/SAOUI-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -12,8 +12,11 @@ html, body {
   margin: 0;    
   padding: 0;     
   min-height: 100vh ;
-  background: linear-gradient(to bottom, lightblue ,darkblue, black);
   font-family: 'SAO UI';
+  background-image: url(/SAOMAP/image/donjon1.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 
 }
 
@@ -55,7 +58,7 @@ html, body {
     grid-column-start: 2;
     grid-row-start: 1;
     border-radius: 13px;
-    background: linear-gradient(45deg, white ,orange, lightgray,gray,black)
+    
 }
 
 #carte1,#carte2,#carte3 {
@@ -74,7 +77,7 @@ html, body {
     align-items: center;
     height: 100%;
     border-radius: 15px;         
-    background: linear-gradient(45deg, orange, gray);
+    background: rgba(255,255,255,0.6);
     overflow: auto;
 }
 .rectgris h1 {
