--- a/Paliers/Palier1/style.css
+++ b/Paliers/Palier1/style.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'SAO UI';
-    src: url('/SAOMAP/SAOUI-Regular.woff2') format('woff2'),
-        url('/SAOMAP/SAOUI-Regular.woff') format('woff');
+    src: url('/SAOMAP/font/SAOUI-Regular.woff2') format('woff2'),
+        url('/SAOMAP/font/SAOUI-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -14,7 +14,10 @@ html, body {
   height: 100%;    
   min-height: 100vh;
   font-family: 'SAO UI';
-  background: radial-gradient(circle, orange 0%, red 45%,black 50%);
+  background-image: url(/SAOMAP/image/paysage2.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   box-sizing: border-box;
 
 }
@@ -28,12 +31,15 @@ html, body {
     gap:5vh
 }
 .btn{
-  background: linear-gradient(90deg,black,darkred,red,darkorange, darkorange, red,darkred,black);
+  background: white;
+  opacity: 0.8;
   border:1px solid black;
   border-radius: 25px;
   height:10vh;
   width: 45vw;
   font-family: 'SAO UI';
   font-size: 4rem;
-  
+}
+.btn:hover{
+  transform: scale(1.1);
 }
