--- a/Paliers/Palier1/World/style.css
+++ b/Paliers/Palier1/World/style.css
@@ -82,28 +82,32 @@ html, body {
 .buttonReset{
     
     text-align: center;
-    padding: 0% 15% ;
+    width: 18vw;
+    height: 4vh;
     border-radius: 15px;
-    background-color: rgb(69, 75, 243);
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 100%;
+    border:1px solid white;
+    background-color: rgb(255, 255, 255,0.8);
+    font-family: 'SAO UI';
+    font-size: 1.5rem;
     font-weight: bold;
 }
 
 #categorie_toggle{
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
+    gap: 5px;
 }
 
 .btn-categorie{
-    padding: 1% 100% ;
     border-radius: 15px;
-    background-color: orange;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 100%;
+    background-color:rgb(255, 255, 255,0.8);
+    font-family: 'SAO UI';
+    font-size: 1.5rem;
     font-weight: bold;
+    width: 9vw;
+    height: 4vh;
 
 }
 .btn-categorie.active{
