--- a/style.css
+++ b/style.css
@@ -231,7 +231,28 @@ display: flex;
     grid-row: span 4 / span 4;
     grid-column-start: 5;
     grid-row-start: 2;
-    color:black;
-    opacity: 0.8;
+    color:rgba(0,0,0,0.8);
+    height: 78vh;
+    overflow-y: auto;
+    border-radius: 15px;
+    background: rgba(255,255,255,0.7);
     
+}
+
+.div6:hover {
+  overflow-y: auto;
+}
+
+/* Style de scrollbar (Chrome / Edge / Safari) */
+.div6::-webkit-scrollbar {
+  width: 8px;
+}
+
+.div6::-webkit-scrollbar-thumb {
+  background: rgba(0,0,0,0.5);
+  border-radius: 10px;
+}
+
+.div6::-webkit-scrollbar-track {
+  background: transparent;
 }
