--- a/style.css
+++ b/style.css
@@ -132,6 +132,8 @@ html, body {
     grid-row: span 4 / span 4;
     grid-column-start: 2;
     grid-row-start: 2;
+    justify-content: center; 
+    align-content: center;
     place-items: center;
     gap:50px;
     transform: translateY(-25px);
