--- a/Paliers/Palier1/World/style.css
+++ b/Paliers/Palier1/World/style.css
@@ -26,8 +26,8 @@ html, body {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(5, 1fr);
-    gap: 8px;
-    padding:4px;
+    gap: 0.7407vh;
+    padding:0.2083vw;
 }
     
 .div1{
@@ -39,12 +39,16 @@ html, body {
     grid-row: span 2 / span 2;
     grid-column-start: 1;
     grid-row-start: 2;
+    height: 39vh;
+    width: 20vw;
 }
 
 .div3 {
     grid-row: span 2 / span 2;
     grid-column-start: 1;
     grid-row-start: 4;
+    height: 39vh;
+    width: 20vw;
 }
 
 .div4 {
@@ -60,8 +64,8 @@ html, body {
 }
 
 #carte {
-  width: 800px;
-  height: 800px;
+  width: 90vh;
+  height: 90vh;
   border-radius: 50%;
   overflow: hidden;
   box-shadow: 0 0 30px rgba(0,0,0,0.8);
@@ -72,13 +76,15 @@ html, body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;               
-    width: 100%;                
+    height: 39vh;              
     border-radius: 15px;         
 
     background: rgba(255,255,255,0.6)
 }
-
+.rectgris h1 {
+    margin: 0.5vh 0;
+    font-size: 1.6vw;
+}
 .buttonReset{
     
     text-align: center;
@@ -88,7 +94,7 @@ html, body {
     border:1px solid white;
     background-color: rgb(255, 255, 255,0.8);
     font-family: 'SAO UI';
-    font-size: 1.5rem;
+    font-size: 1.3vw;
     font-weight: bold;
 }
 
@@ -97,14 +103,14 @@ html, body {
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    gap: 5px;
+    gap: 1vh;
 }
 
 .btn-categorie{
     border-radius: 15px;
     background-color:rgb(255, 255, 255,0.8);
     font-family: 'SAO UI';
-    font-size: 1.5rem;
+    font-size: 1.3vw;
     font-weight: bold;
     width: 9vw;
     height: 4vh;
